--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     .parallax .text h2 {
         font-size: 48px;
         font-weight: bold;
-        color: rgba(105, 89, 89, 0.856); 
+        color: black; 
     }
     
     .parallax .text p {
